--- a/views/create-post.ejs
+++ b/views/create-post.ejs
@@ -9,7 +9,7 @@
     <%- include('includes/header') %>
     <main>
       <h1>add a new post</h1>
-      <form action="..." method="...">
+      <form action="/posts" method="POST">
         <div class="form-control">
           <label for="title">title</label>
           <input type="text" id="title" name="title" required />
@@ -28,6 +28,7 @@
           <label for="content">post content</label>
           <textarea id="content" name="content" required rows="5"></textarea>
         </div>
+
         <div class="form-control">
           <label for="author">select author</label>
           <select id="author" name="author">
