[code] making the create work without error

--- a/views/create-post.ejs
+++ b/views/create-post.ejs
@@ -25,13 +25,14 @@
           />
         </div>
         <div class="form-control">
-          <label for="content">post content</label>
-          <textarea id="content" name="content" required rows="5"></textarea>
+          <label for="body">post content</label>
+          <textarea id="body" name="body" required rows="5"></textarea>
         </div>
 
         <div class="form-control">
           <label for="author">select author</label>
-          <select id="author" name="author">
+          +
+          <select id="author" name="author_id">
             <% for (let author of authors) { %>
             <option value="<%= author.id %>"><%= author.name %></option>
             <% } %>
