[code] making the post list work

--- a/views/includes/post-item.ejs
+++ b/views/includes/post-item.ejs
@@ -3,7 +3,7 @@
   <p class="post-item-author">by <%= post.author_name %></p>
   <p><%= post.summary %></p>
   <div class="post-actions">
-    <button class="btn btn-alt">Delete Post</button>
+    <button class="btn btn-alt">delete post</button>
     <a>edit post</a>
     <a class="btn">view post</a>
   </div>
