[code] adding the post details

--- a/views/includes/post-item.ejs
+++ b/views/includes/post-item.ejs
@@ -5,6 +5,6 @@
   <div class="post-actions">
     <button class="btn btn-alt">delete post</button>
     <a>edit post</a>
-    <a class="btn">view post</a>
+    <a class="btn" href="/posts/<%= post.id %>">view post</a>
   </div>
 </article>
