[code] adding the footer

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -11,5 +11,6 @@
       <p>unfortunately, we were not able to find this resource.</p>
       <a class="btn" href="/">back to safety!</a>
     </main>
+    <%- include('includes/footer') %>
   </body>
 </html>
