--- a/views/create-post.ejs
+++ b/views/create-post.ejs
@@ -41,5 +41,7 @@
         <button class="btn">add post</button>
       </form>
     </main>
+
+    <%- include('includes/footer') %>
   </body>
 </html>
