--- a/views/post-detail.ejs
+++ b/views/post-detail.ejs
@@ -20,5 +20,6 @@
         <p id="body"><%= post.body %></p>
       </section>
     </main>
+    <%- include('includes/footer') %>
   </body>
 </html>
