[code] adding a more readbale date for the time tag

--- a/views/post-detail.ejs
+++ b/views/post-detail.ejs
@@ -13,7 +13,7 @@
         <address class="post-author">
           <a href="mailto:<%= post.author_email %>"><%= post.author_name %></a>
         </address>
-        | <time datetime="<%= post.date %>"><%= post.date %></time>
+        | <time datetime="<%= post.date %>"><%= post.humanReadableDate %></time>
       </section>
       <hr />
       <section>
