--- a/views/includes/post-item.ejs
+++ b/views/includes/post-item.ejs
@@ -4,7 +4,7 @@
   <p><%= post.summary %></p>
   <div class="post-actions">
     <button class="btn btn-alt">delete post</button>
-    <a>edit post</a>
+    <a href="/posts/<%= post.id %>/edit">edit post</a>
     <a class="btn" href="/posts/<%= post.id %>">view post</a>
   </div>
 </article>
