--- a/views/update-post.ejs
+++ b/views/update-post.ejs
@@ -9,8 +9,9 @@
     <%- include('includes/header') %>
     <main>
       <h1>update post</h1>
-      <form action="..." method="...">
+      <form action="/posts/<%= post.id %>/edit" method="POST">
         <div class="form-control">
+          <input type="hidden" name="id" value="<%= post.id %>" />
           <label for="title">title</label>
           <input
             type="text"
@@ -33,7 +34,7 @@
         </div>
         <div class="form-control">
           <label for="content">post content</label>
-          <textarea id="content" name="content" required rows="5">
+          <textarea id="body" name="body" required rows="5">
 <%= post.body %></textarea
           >
         </div>
