--- a/views/includes/post-item.ejs
+++ b/views/includes/post-item.ejs
@@ -3,7 +3,9 @@
   <p class="post-item-author">by <%= post.author_name %></p>
   <p><%= post.summary %></p>
   <div class="post-actions">
-    <button class="btn btn-alt">delete post</button>
+    <form action="/posts/<%= post.id %>/delete" method="POST">
+      <button class="btn btn-alt">delete post</button>
+    </form>
     <a href="/posts/<%= post.id %>/edit">edit post</a>
     <a class="btn" href="/posts/<%= post.id %>">view post</a>
   </div>
